--- a/package.json
+++ b/package.json
@@ -55,12 +55,14 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile && npm run test",
+    "vscode:prepublish": "pnpm run compile && pnpm run test",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --coverageReporters=text --coverageReporters=text-summary --coverageReporters=html"
+    "test:coverage": "jest --coverage --coverageReporters=text --coverageReporters=text-summary --coverageReporters=html",
+    "setup": "pnpm run enable-pnpm && pnpm install && pnpm run compile",
+    "enable-pnpm": "corepack enable"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
@@ -71,6 +73,7 @@
     "typescript": "^5.1.6"
   },
   "license": "MIT",
+  "packageManager": "pnpm@10.19.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/couimet/rangelink"
