--- a/package.json
+++ b/package.json
@@ -71,6 +71,10 @@
   "scripts": {
     "vscode:prepublish": "pnpm run compile && pnpm run test",
     "compile": "tsc -p ./",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "watch": "tsc -watch -p ./",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -79,10 +83,21 @@
     "enable-pnpm": "corepack enable"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@types/vscode": "^1.80.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^17.10.0",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "eslint": "^9.10.0",
     "jest": "^29.7.0",
+    "prettier-plugin-packagejson": "^2.5.0",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.6"
   },
