--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "rangelink",
   "displayName": "RangeLink",
-  "description": "Create sharable links to code ranges in your files. Perfect for documentation, AI prompts, and team collaboration.",
   "version": "0.1.0",
-  "publisher": "rangelink",
-  "engines": {
-    "vscode": "^1.80.0"
-  },
+  "description": "Create sharable links to code ranges in your files. Perfect for documentation, AI prompts, and team collaboration.",
   "categories": [
     "Other"
   ],
@@ -18,8 +14,31 @@
     "documentation",
     "ai"
   ],
-  "activationEvents": [],
+  "homepage": "https://github.com/couimet/rangelink#readme",
+  "bugs": {
+    "url": "https://github.com/couimet/rangelink/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/couimet/rangelink"
+  },
+  "license": "MIT",
+  "publisher": "rangelink",
   "main": "./out/extension.js",
+  "scripts": {
+    "compile": "tsc -p ./",
+    "enable-pnpm": "corepack enable",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "setup": "pnpm run enable-pnpm && pnpm install && pnpm run compile",
+    "test": "jest --coverage",
+    "test:coverage": "jest --coverage --coverageReporters=text --coverageReporters=text-summary --coverageReporters=html",
+    "test:watch": "jest --watch",
+    "vscode:prepublish": "pnpm run compile && pnpm run test",
+    "watch": "tsc -watch -p ./"
+  },
   "contributes": {
     "commands": [
       {
@@ -35,19 +54,8 @@
         "icon": "$(link-external)"
       }
     ],
-    "menus": {
-      "editor/context": [
-        {
-          "when": "editorTextFocus",
-          "command": "rangelink.copyLinkToSelectionWithRelativePath",
-          "group": "9_cutcopypaste@1"
         },
-        {
-          "when": "editorTextFocus",
-          "command": "rangelink.copyLinkToSelectionWithAbsolutePath",
-          "group": "9_cutcopypaste@1"
         }
-      ]
     },
     "keybindings": [
       {
@@ -63,25 +71,22 @@
         "when": "editorHasSelection || editorTextFocus"
       }
     ],
-    "configuration": {
-      "title": "RangeLink",
-      "properties": {}
+    "menus": {
+      "editor/context": [
+        {
+          "when": "editorTextFocus",
+          "command": "rangelink.copyLinkToSelectionWithRelativePath",
+          "group": "9_cutcopypaste@1"
+        },
+        {
+          "when": "editorTextFocus",
+          "command": "rangelink.copyLinkToSelectionWithAbsolutePath",
+          "group": "9_cutcopypaste@1"
+        }
+      ]
     }
   },
-  "scripts": {
-    "vscode:prepublish": "pnpm run compile && pnpm run test",
-    "compile": "tsc -p ./",
-    "format": "prettier --check .",
-    "format:fix": "prettier --write .",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "watch": "tsc -watch -p ./",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --coverageReporters=text --coverageReporters=text-summary --coverageReporters=html",
-    "setup": "pnpm run enable-pnpm && pnpm install && pnpm run compile",
-    "enable-pnpm": "corepack enable"
-  },
+  "activationEvents": [],
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@types/jest": "^29.5.0",
@@ -89,26 +94,20 @@
     "@types/vscode": "^1.80.0",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^17.10.0",
     "eslint-plugin-unicorn": "^55.0.0",
-    "eslint": "^9.10.0",
     "jest": "^29.7.0",
-    "prettier-plugin-packagejson": "^2.5.0",
     "prettier": "^3.3.3",
+    "prettier-plugin-packagejson": "^2.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.6"
   },
-  "license": "MIT",
   "packageManager": "pnpm@10.19.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/couimet/rangelink"
-  },
-  "bugs": {
-    "url": "https://github.com/couimet/rangelink/issues"
-  },
-  "homepage": "https://github.com/couimet/rangelink#readme"
+  "engines": {
+    "vscode": "^1.80.0"
+  }
 }
