feat: implement Phase 1A - column-mode selection with double hash format
This commit completes Phase 1A: refactoring column-mode selection detection
and formatting to use double delimHash (##) instead of hardcoded prefixes,
making the implementation delimiter-agnostic and future-compatible.

## Core Changes

### Column-Mode Format
- Replaced hardcoded `CL` prefix with double `delimHash` (##) for column-mode
- Format: `path##L10C5-L20C10` (double hash indicates column-mode)
- Works seamlessly with any `delimHash` value (single or multi-character)
- Example: if `delimHash="##"`, column mode uses `####` (4 hash chars)

### Code Architecture Improvements
- Introduced type-safe enums (`AnchorColumns`, `HashMode`) replacing booleans
- Centralized link formatting with helper methods:
  - `buildAnchor()` - constructs anchor portion (line-only or with columns)
  - `joinWithHash()` - joins path with appropriate hash prefix
  - `formatSimpleLineReference()` - handles simple line:path format
- Eliminated code duplication in `formatRegularSelectionLink()`
- Unified anchor building through single call site

### Selection Handling
- Empty selections now throw error (prevented by command enablement in UI)
- Added `editorHasSelection` enablement to all commands/keybindings/menus
- Improved command availability: only enabled when selection exists

## Testing

### Phase 1A Test Coverage (14 comprehensive tests)
All tests organized in dedicated `createLink - Column mode selections (Phase 1A)` suite:

✅ Column-mode detection and formatting:
  - Default delimiters
  - Custom single-character delimiters
  - Custom multi-character delimiters

✅ Edge cases:
  - Line 0 (first line)
  - Column 0 (beginning of line)
  - Very large line/column numbers (9999+, 999+)
  - Minimum 2 selections
  - 10+ selections

✅ Negative cases (not column-mode):
  - Duplicate selections on same line
  - Non-consecutive lines
  - Different character ranges
  - Single selection

✅ Path handling:
  - Relative paths

--- a/package.json
+++ b/package.json
@@ -45,13 +45,15 @@
         "command": "rangelink.copyLinkToSelectionWithRelativePath",
         "title": "Copy Range Link",
         "category": "RangeLink",
-        "icon": "$(link)"
+        "icon": "$(link)",
+        "enablement": "editorHasSelection"
       },
       {
         "command": "rangelink.copyLinkToSelectionWithAbsolutePath",
         "title": "Copy Range Link (Absolute)",
         "category": "RangeLink",
-        "icon": "$(link-external)"
+        "icon": "$(link-external)",
+        "enablement": "editorHasSelection"
       }
     ],
     "configuration": {
@@ -88,24 +90,24 @@
         "command": "rangelink.copyLinkToSelectionWithRelativePath",
         "key": "ctrl+r ctrl+l",
         "mac": "cmd+r cmd+l",
-        "when": "editorHasSelection || editorTextFocus"
+        "when": "editorHasSelection"
       },
       {
         "command": "rangelink.copyLinkToSelectionWithAbsolutePath",
         "key": "ctrl+r ctrl+shift+l",
         "mac": "cmd+r cmd+shift+l",
-        "when": "editorHasSelection || editorTextFocus"
+        "when": "editorHasSelection"
       }
     ],
     "menus": {
       "editor/context": [
         {
-          "when": "editorTextFocus",
+          "when": "editorHasSelection",
           "command": "rangelink.copyLinkToSelectionWithRelativePath",
           "group": "9_cutcopypaste@1"
         },
         {
-          "when": "editorTextFocus",
+          "when": "editorHasSelection",
           "command": "rangelink.copyLinkToSelectionWithAbsolutePath",
           "group": "9_cutcopypaste@1"
         }
