--- a/package.json
+++ b/package.json
@@ -54,6 +54,20 @@
         "category": "RangeLink",
         "icon": "$(link-external)",
         "enablement": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.copyPortableLinkToSelectionWithRelativePath",
+        "title": "Copy Portable RangeLink",
+        "category": "RangeLink",
+        "icon": "$(link-external)",
+        "enablement": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.copyPortableLinkToSelectionWithAbsolutePath",
+        "title": "Copy Portable RangeLink (Absolute)",
+        "category": "RangeLink",
+        "icon": "$(link-external)",
+        "enablement": "editorHasSelection"
       }
     ],
     "configuration": {
@@ -65,10 +79,10 @@
           "description": "Delimiter used before line numbers (e.g., L in #L10-L20)",
           "pattern": "^[^0-9]+$"
         },
-        "rangelink.delimiterColumn": {
+        "rangelink.delimiterPosition": {
           "type": "string",
           "default": "C",
-          "description": "Delimiter used before column numbers (e.g., C in #L10C5-L20C10)",
+          "description": "Delimiter used before position numbers (e.g., C in #L10C5-L20C10)",
           "pattern": "^[^0-9]+$"
         },
         "rangelink.delimiterHash": {
@@ -97,6 +111,18 @@
         "key": "ctrl+r ctrl+shift+l",
         "mac": "cmd+r cmd+shift+l",
         "when": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.copyPortableLinkToSelectionWithRelativePath",
+        "key": "ctrl+r ctrl+p",
+        "mac": "cmd+r cmd+p",
+        "when": "editorHasSelection"
+      },
+      {
+        "command": "rangelink.copyPortableLinkToSelectionWithAbsolutePath",
+        "key": "ctrl+r ctrl+shift+p",
+        "mac": "cmd+r cmd+shift+p",
+        "when": "editorHasSelection"
       }
     ],
     "menus": {
@@ -109,6 +135,16 @@
         {
           "when": "editorHasSelection",
           "command": "rangelink.copyLinkToSelectionWithAbsolutePath",
+          "group": "9_cutcopypaste@1"
+        },
+        {
+          "when": "editorHasSelection",
+          "command": "rangelink.copyPortableLinkToSelectionWithRelativePath",
+          "group": "9_cutcopypaste@1"
+        },
+        {
+          "when": "editorHasSelection",
+          "command": "rangelink.copyPortableLinkToSelectionWithAbsolutePath",
           "group": "9_cutcopypaste@1"
         }
       ]
