refactor: rename "column selection" to "rectangular selection" for clarity
Replace "column selection/mode" terminology with "rectangular selection/mode"
across the codebase. Use editor-native terminology when documenting
editor-specific features (e.g., "visual block mode" for Neovim).

MOTIVATION:
- Different editors use different terms (column, block, box, rectangle)
- "Rectangular selection" is the most descriptive and universal term
- Better describes the geometric nature of the selection
- Clearer for users who may not be familiar with "column mode"
- Respects editor-specific terminology to appeal to each audience

CHANGES:

Code (packages/rangelink-core-ts/):
- Rename enum: `HashMode.ColumnMode` → `HashMode.RectangularMode`
- Rename function: `isColumnSelection()` → `isRectangularSelection()`
- Rename files:
  - `src/selection/isColumnSelection.ts` → `isRectangularSelection.ts`
  - `src/__tests__/selection/isColumnSelection.test.ts` → `isRectangularSelection.test.ts`
- Update all function calls and references throughout codebase
- Update message code: `BYOD_ERR_COLUMN_MODE_DETECTION` → `BYOD_ERR_RECTANGULAR_MODE_DETECTION`
- Update all comments and test descriptions

Code (packages/rangelink-vscode-extension/):
- Update all test comments and descriptions

Documentation (all *.md files):
- Replace "column-mode" → "rectangular mode"
- Replace "column selection" → "rectangular selection"
- Replace "Column Mode" → "Rectangular Mode"
- Replace "column mode" → "rectangular mode" in all contexts
- Update JSON field names: `isColumnMode` → `isRectangularMode` in examples
- Update test case names: `column_mode_selection` → `rectangular_mode_selection`

Documentation (editor-specific idiomatic terminology):
- VSCode: "rectangular selection (Alt+drag, also called column or box selection)"
- Neovim: "visual block mode (Ctrl-v)" instead of "rectangular mode"
- Use editor-native terms when documenting editor-specific features
- Use "rectangular mode" only for RangeLink's int

--- a/packages/rangelink-core-ts/package.json
+++ b/packages/rangelink-core-ts/package.json
@@ -15,7 +15,9 @@
     "rangelink",
     "code-navigation",
     "link-generation",
-    "domain-model"
+    "domain-model",
+    "rectangular selection",
+    "code reference"
   ],
   "author": "RangeLink Contributors",
   "license": "MIT",
