--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -12,7 +12,10 @@
     "range",
     "citation",
     "documentation",
-    "ai"
+    "ai",
+    "rectangular selection",
+    "code sharing",
+    "collaboration"
   ],
   "homepage": "https://github.com/couimet/rangelink#readme",
   "bugs": {
