docs(extension): rewrite README for VSCode Marketplace launch
Replace minimal placeholder README with comprehensive, marketplace-ready
documentation. Focuses on cross-editor sharing and appeals to multiple
developer audiences. Includes package.json metadata updates for proper
monorepo navigation.

CHANGES:

New Extension README (184 lines):
- Hero section with badges and tagline
- Clear value proposition (works everywhere, GitHub notation, portable)
- Feature highlights with emoji icons (with column precision in examples)
- 4 concrete use cases with examples:
  - AI assistants (Claude Code, Copilot)
  - Cross-editor teams (VSCode, Cursor, Sublime)
  - Documentation writers
  - Code reviewers
- Quick start with installation steps
- Commands table with Mac/Win/Linux shortcuts
- Link format examples (single line, multi-line, columns, rectangular)
- Rectangular selection explanation (VSCode column selection)
- Portable links (BYOD) overview
- Configuration section with validation rules
- Roadmap teaser (3 upcoming features)
- Requirements, links, and about section

Terminology Consistency:
- Feature example updated to show column positions: `#L10C5-L25C20`
- "column selection" → "rectangular selection" in format descriptions
- Links updated to point to package-specific directories

Package.json Updates (rangelink-vscode-extension):
- homepage: Points to extension's specific package directory
- repository.directory: Added "packages/rangelink-vscode-extension"
- bugs: Points to monorepo root (centralized issue tracking)
- Enables proper GitHub monorepo navigation

Package.json Updates (rangelink-core-ts):
- homepage: Points to core library's specific package directory
- repository.directory: Added "packages/rangelink-core-ts"
- bugs: Points to monorepo root (centralized issue tracking)

Analysis Document (docs/extension-readme-analysis.md):
- Current state assessment and problems
- Marketplace best practices research
- Target audience analysis and messaging strategy
- Con

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -17,13 +17,14 @@
     "code sharing",
     "collaboration"
   ],
-  "homepage": "https://github.com/couimet/rangelink#readme",
+  "homepage": "https://github.com/couimet/rangelink/tree/main/packages/rangelink-vscode-extension#readme",
   "bugs": {
     "url": "https://github.com/couimet/rangelink/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/couimet/rangelink"
+    "url": "https://github.com/couimet/rangelink",
+    "directory": "packages/rangelink-vscode-extension"
   },
   "license": "MIT",
   "publisher": "rangelink",
