Add icon to the extension and refer to it in the `README` and `package.json`

--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -2,6 +2,7 @@
   "name": "rangelink",
   "displayName": "RangeLink",
   "version": "0.1.0",
+  "icon": "icon.png",
   "description": "Create sharable links to code ranges in your files. Perfect for documentation, AI prompts, and team collaboration.",
   "categories": [
     "Other"
