--- a/packages/rangelink-core-ts/package.json
+++ b/packages/rangelink-core-ts/package.json
@@ -5,9 +5,9 @@
   "main": "./out/index.js",
   "types": "./out/index.d.ts",
   "scripts": {
-    "compile": "tsc -p .",
-    "test": "jest --coverage",
     "clean": "rm -rf out coverage",
+    "compile": "tsc -p .",
+    "test": "jest --coverage"
   },
   "keywords": [
     "rangelink",
