--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,12 @@
     {
       "label": "Build: rangelink-core-ts",
       "type": "shell",
-      "command": "source ~/.nvm/nvm.sh && nvm use && pnpm -C packages/rangelink-core-ts run compile"
+      "command": "nvm use && pnpm -C packages/rangelink-core-ts run compile"
     },
     {
       "label": "Watch: rangelink-vscode-extension",
       "type": "shell",
-      "command": "source ~/.nvm/nvm.sh && nvm use && pnpm -C packages/rangelink-vscode-extension run watch",
+      "command": "nvm use && pnpm -C packages/rangelink-vscode-extension run watch",
       "dependsOn": [
         "Build: rangelink-core-ts"
       ],
