--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "license": "MIT",
   "scripts": {
-    "clean": "pnpm -r run clean",
-    "compile": "pnpm -r run compile",
+    "clean": "pnpm -r clean",
+    "compile": "pnpm -r compile",
     "enable-pnpm": "corepack enable",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "lint": "pnpm -r run lint",
-    "lint:fix": "pnpm -r run lint:fix",
+    "lint": "pnpm -r lint",
+    "lint:fix": "pnpm -r lint:fix",
     "package:vscode-extension": "pnpm --filter rangelink-vscode-extension exec vsce package --no-dependencies",
     "publish:vscode-extension": "pnpm --filter rangelink-vscode-extension exec vsce publish --no-dependencies",
-    "test": "pnpm -r run test"
+    "test": "pnpm -r test"
   },
   "devDependencies": {
     "prettier": "^3.1.1",
