Add `install-local:*` scripts to automate installing the vscode extension

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "enable-pnpm": "corepack enable",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
+    "install-local:vscode-extension:both": "pnpm --filter rangelink-vscode-extension install-local",
+    "install-local:vscode-extension:cursor": "pnpm --filter rangelink-vscode-extension install-local:cursor",
+    "install-local:vscode-extension:vscode": "pnpm --filter rangelink-vscode-extension install-local:vscode",
     "lint": "pnpm -r lint",
     "lint:fix": "pnpm -r lint:fix",
     "package:vscode-extension": "pnpm --filter rangelink-vscode-extension package",
