--- a/packages/rangelink-core-ts/package.json
+++ b/packages/rangelink-core-ts/package.json
@@ -5,7 +5,7 @@
   "main": "./out/index.js",
   "types": "./out/index.d.ts",
   "scripts": {
-    "clean": "rm -rf out coverage",
+    "clean": "rm -rf out coverage *.tsbuildinfo",
     "compile": "tsc -p .",
     "test": "jest --coverage"
   },
