--- a/packages/rangelink-core-ts/tsconfig.json
+++ b/packages/rangelink-core-ts/tsconfig.json
@@ -4,8 +4,7 @@
     "rootDir": "./src",
     "outDir": "./out",
     "declaration": true,
-    "declarationMap": true,
-    "composite": true
+    "declarationMap": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "out", "src/**/*.test.ts"]
