# Add portable pnpm wrapper for VS Code tasks
## Problem
When launching Cursor/VS Code fresh, tasks would fail with `command not found: pnpm` because:
- Tasks run in non-interactive shells without the user's environment loaded
- nvm and pnpm weren't available in PATH
- The `.nvmrc` file wasn't being respected

## Solution
Created a portable shell wrapper that ensures nvm and pnpm are available for all tasks.

### Changes Made

1. **Created `scripts/pnpm-exec.sh`**
   - Sources user's shell RC file (`.zshrc` or `.bashrc`/`.bash_profile`) to load their environment
   - Falls back to loading nvm directly from `$NVM_DIR` or `~/.nvm`
   - Runs `nvm use` to respect `.nvmrc`
   - Enables pnpm via corepack if needed
   - Falls back to `corepack pnpm` or `npx pnpm` if direct command not available
   - Passes all arguments through to pnpm

2. **Updated `.vscode/tasks.json`**
   - Replaced `pnpm` with `./scripts/pnpm-exec.sh` in all tasks:
     - Build: rangelink-core-ts
     - Generate version.json (also fixed arg order: `--filter <pkg> exec` not `exec --filter`)
     - Watch: rangelink-core-ts
     - Watch: rangelink-vscode-extension

### Benefits
- Portable across bash and zsh users
- Works with standard nvm setups and custom environments
- No hardcoded paths or environment-specific config
- Self-contained in the repository
- Tasks work immediately on fresh IDE launches
- No user intervention required

### Usage
The wrapper is transparent - all tasks now work out of the box. For manual use:
```bash
./scripts/pnpm-exec.sh <any-pnpm-command>
```

Examples:
```bash
./scripts/pnpm-exec.sh -C packages/rangelink-core-ts compile
./scripts/pnpm-exec.sh --filter rangelink-vscode-extension exec node scripts/generate-version.js
```

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,12 @@
     {
       "label": "Build: rangelink-core-ts",
       "type": "shell",
-      "command": "pnpm -C packages/rangelink-core-ts compile"
+      "command": "./scripts/pnpm-exec.sh -C packages/rangelink-core-ts compile"
     },
     {
       "label": "Generate version.json",
       "type": "shell",
-      "command": "cd packages/rangelink-vscode-extension && node scripts/generate-version.js && cp src/version.json out/version.json",
+      "command": "./scripts/pnpm-exec.sh --filter rangelink-vscode-extension exec node scripts/generate-version.js && cp packages/rangelink-vscode-extension/src/version.json packages/rangelink-vscode-extension/out/version.json",
       "problemMatcher": []
     },
     {
@@ -26,7 +26,7 @@
     {
       "label": "Watch: rangelink-vscode-extension",
       "type": "shell",
-      "command": "pnpm -C packages/rangelink-vscode-extension watch",
+      "command": "./scripts/pnpm-exec.sh -C packages/rangelink-vscode-extension watch",
       "dependsOn": [
         "Build: rangelink-core-ts",
         "Generate version.json"
