--- a/packages/rangelink-vscode-extension/package.json
+++ b/packages/rangelink-vscode-extension/package.json
@@ -31,7 +31,7 @@
   "main": "./out/extension.js",
   "scripts": {
     "clean": "rm -rf out coverage *.tsbuildinfo *.vsix",
-    "compile": "node scripts/generate-version.js && tsc -p . && cp src/version.json out/version.json",
+    "compile": "node scripts/generate-version.js && node esbuild.config.js && cp src/version.json out/version.json",
     "install-local": "./scripts/install-local.sh",
     "install-local:cursor": "./scripts/install-local.sh cursor",
     "install-local:vscode": "./scripts/install-local.sh vscode",
@@ -174,6 +174,7 @@
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "@vscode/vsce": "^3.6.2",
+    "esbuild": "^0.25.12",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
