fix: Move ESLint to root and configure properly
## Problem

ESLint was installed only in packages/rangelink-vscode-extension, causing:
- ❌ `pnpm lint` and `pnpm lint:fix` failed (packages missing lint scripts)
- ❌ Inconsistent tooling between packages
- ❌ ESLint was linting compiled `out/` directories
- ❌ Jest globals not recognized in test files
- ❌ Node.js config files flagged for using `require()` and `process`

## Solution

Move ESLint to monorepo root and configure properly.

### ✅ Moved ESLint dependencies to root

Moved from packages/rangelink-vscode-extension to root devDependencies:
- @eslint/js
- @typescript-eslint/eslint-plugin
- @typescript-eslint/parser
- eslint
- eslint-config-prettier
- eslint-import-resolver-typescript
- eslint-plugin-import
- eslint-plugin-n
- eslint-plugin-unicorn

### ✅ Updated root scripts

**Before:**
```json
"lint": "pnpm -r lint",
"lint:fix": "pnpm -r lint:fix",
```

**After:**
```json
"lint": "eslint .",
"lint:fix": "eslint . --fix",
```

### ✅ Fixed ESLint configuration

Updated `eslint.config.mjs`:
- Fixed ignore patterns: `'out/**'` → `'**/out/**'` (works from root)
- Added `**/coverage/**` and `**/*.vsix` to ignores
- Added Jest globals (describe, it, expect, etc.) for test files
- Split TypeScript and JavaScript configs (`.ts` files only use TypeScript parser)
- Added special config for Node.js config files (`*.config.js`, etc.)
  - Allows `require()` imports (CommonJS)
  - Recognizes Node.js globals (process, __dirname, etc.)

### ✅ Cleaned up extension package.json

Removed ESLint dependencies from packages/rangelink-vscode-extension/package.json
(now inherited from root workspace)

### ✅ Updated DEVELOPMENT.md

Added linting commands to workspace commands section:
```bash
# Fix linting issues
pnpm lint:fix

# Format code
pnpm format:fix
```

## Benefits

1. 🎯 **Single source of truth** - One ESLint config at root (`eslint.config.mjs`)
2. ⚡ **Works out of the box** - No per-package lint script setup needed
3. 🔧 **Easie

--- a/package.json
+++ b/package.json
@@ -17,14 +17,23 @@
     "install-local:vscode-extension:both": "pnpm --filter rangelink-vscode-extension install-local",
     "install-local:vscode-extension:cursor": "pnpm --filter rangelink-vscode-extension install-local:cursor",
     "install-local:vscode-extension:vscode": "pnpm --filter rangelink-vscode-extension install-local:vscode",
-    "lint": "pnpm -r lint",
-    "lint:fix": "pnpm -r lint:fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "package:vscode-extension": "pnpm --filter rangelink-vscode-extension package",
     "publish:vscode-extension": "pnpm --filter rangelink-vscode-extension publish",
     "test": "pnpm -r test",
     "watch": "pnpm -r --parallel watch"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^17.10.0",
+    "eslint-plugin-unicorn": "^55.0.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
